@@ -28,7 +28,6 @@ import org.springframework.stereotype.Service;
 import java.time.LocalDate;
 import java.time.temporal.ChronoUnit;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -38,7 +37,7 @@ public class ReservationService {
     private final ReservationLogRepository reservationLogRepository;
     private final PostService postService;
 
-    public Long create(CreateReservationReqBody reqBody, Member author) {
+    public ReservationDto create(CreateReservationReqBody reqBody, Member author) {
         Post post = postService.getById(reqBody.postId());
 
         // 기간 중복 체크
@@ -84,8 +83,8 @@ public class ReservationService {
             reservation.addAllOptions(reservationOptions);
         }
 
-        reservationRepository.save(reservation);
-        return reservation.getId();
+        Reservation r = reservationRepository.save(reservation);
+        return convertToReservationDto(r);
     }
 
     public long count() {
@@ -173,37 +172,28 @@ public class ReservationService {
         return options;
     }
 
-    public PagePayload<GuestReservationSummaryResBody> getSentReservations(Member author, Pageable pageable, ReservationStatus status, String keyword) {
-        // TODO: post의 제목을 keyword로 검색하도록 수정 필요
-        // TODO: QueryDsl로 변경 예정
-        Page<Reservation> reservationPage;
-        if (status == null) {
-            reservationPage = reservationRepository.findByAuthor(author, pageable);
-        } else {
-            reservationPage = reservationRepository.findByAuthorAndStatus(author, status, pageable);
-        }
+    public PagePayload<GuestReservationSummaryResBody> getSentReservations(
+            Member author,
+            Pageable pageable,
+            ReservationStatus status,
+            String keyword) {
+        Page<Reservation> reservationPage = reservationQueryRepository.findByAuthorWithFetch(author, status, keyword, pageable);
 
-        // DTO 매핑 및 총 금액 계산 로직 수행
+        // 이제 Lazy Loading 없이 바로 접근 가능
         Page<GuestReservationSummaryResBody> reservationSummaryDtoPage = reservationPage.map(reservation -> {
-
             Post post = reservation.getPost();
-            List<ReservationOption> options = reservation.getReservationOptions(); // Lazy Loading 발생 가능
+            List<ReservationOption> options = reservation.getReservationOptions();
 
-            // 총 금액 계산
             int totalAmount = calculateTotalAmount(reservation, post, options);
-
-            // PostSummary DTO 생성
             GuestReservationSummaryResBody.ReservationPostSummaryDto postSummary = createPostSummaryDto(post);
 
-            // Option DTO 리스트 생성 (ReservationOption -> PostOption을 통해 name, id 가져옴)
             List<OptionDto> optionDtos = options.stream()
                     .map(ro -> new OptionDto(
                             ro.getPostOption().getId(),
-                            ro.getPostOption().getName() // PostOption 엔티티에서 가져옴
+                            ro.getPostOption().getName()
                     ))
-                    .collect(Collectors.toList());
+                    .toList();
 
-            // 최종 DTO 생성
             return new GuestReservationSummaryResBody(
                     reservation,
                     postSummary,
@@ -216,7 +206,7 @@ public class ReservationService {
     }
 
     /**
-     * 예약 총 금액을 계산 (PostOption을 Lazy Loading하여 접근)
+     * 예약 총 금액을 계산
      */
     private int calculateTotalAmount(Reservation reservation, Post post, List<ReservationOption> options) {
         // 기간 일수 계산 (시작일과 종료일 포함)
@@ -277,17 +267,11 @@ public class ReservationService {
         if (!post.getAuthor().getId().equals(member.getId())) {
             throw new ServiceException(HttpStatus.FORBIDDEN, "해당 게시글의 호스트가 아닙니다.");
         }
-
-        Page<Reservation> reservationPage;
-        if (status == null) {
-            reservationPage = reservationRepository.findByPost(post, pageable);
-        } else {
-            reservationPage = reservationRepository.findByPostAndStatus(post, status, pageable);
-        }
+        Page<Reservation> reservationPage = reservationQueryRepository.findByPostWithFetch(post, status, pageable);
 
         Page<HostReservationSummaryResBody> reservationSummaryDtoPage = reservationPage.map(reservation -> {
 
-            List<ReservationOption> options = reservation.getReservationOptions(); // Lazy Loading 발생 가능
+            List<ReservationOption> options = reservation.getReservationOptions();
 
             // 총 금액 계산 (calculateTotalAmount 재사용)
             int totalAmount = calculateTotalAmount(reservation, post, options);
@@ -312,7 +296,7 @@ public class ReservationService {
     }
 
     public ReservationDto getReservationDtoById(Long reservationId, Long memberId) {
-        Reservation reservation = reservationRepository.findById(reservationId)
+        Reservation reservation = reservationQueryRepository.findByIdWithAll(reservationId)
                 .orElseThrow(() -> new ServiceException(HttpStatus.NOT_FOUND, "해당 예약을 찾을 수 없습니다."));
 
         // 권한 체크
@@ -321,35 +305,11 @@ public class ReservationService {
             throw new ServiceException(HttpStatus.FORBIDDEN, "해당 예약에 대한 접근 권한이 없습니다.");
         }
 
-        Post post = reservation.getPost();
-        List<ReservationOption> options = reservation.getReservationOptions();
-
-        // 총 금액 계산 및 데이터 준비 (Service 책임)
-        int totalAmount = calculateTotalAmount(reservation, post, options);
-
-        // Option DTO 생성
-        List<OptionDto> optionDtos = options.stream()
-                .map(ro -> new OptionDto(
-                        ro.getPostOption().getId(),
-                        ro.getPostOption().getName()
-                ))
-                .toList();
-
-        // ReservationLogDtoList 찾기
-        List<ReservationLogDto> logDtos = reservationLogRepository.findByReservation(reservation).stream()
-                .map(ReservationLogDto::new)
-                .toList();
-
-        return new ReservationDto(
-                reservation,
-                optionDtos,
-                logDtos,
-                totalAmount
-        );
+        return convertToReservationDto(reservation);
     }
 
-    public void updateReservationStatus(Long reservationId, Long memberId, UpdateReservationStatusReqBody reqBody) {
-        Reservation reservation = reservationRepository.findById(reservationId)
+    public ReservationDto updateReservationStatus(Long reservationId, Long memberId, UpdateReservationStatusReqBody reqBody) {
+        Reservation reservation = reservationQueryRepository.findByIdWithPostAndAuthor(reservationId)
                 .orElseThrow(() -> new ServiceException(HttpStatus.NOT_FOUND, "해당 예약을 찾을 수 없습니다."));
 
         // 권한 체크
@@ -450,11 +410,13 @@ public class ReservationService {
             }
             default -> throw new ServiceException(HttpStatus.BAD_REQUEST, "지원하지 않는 상태 전환입니다.");
         }
-        reservationRepository.save(reservation);
+        Reservation r = reservationRepository.save(reservation);
 
         // 상태 전환 로그 저장
         ReservationLog log = new ReservationLog(reservation.getStatus(), reservation);
         reservationLogRepository.save(log);
+
+        return convertToReservationDto(r);
     }
 
     private void validateHostOnly(boolean isHost, String action) {
@@ -471,13 +433,13 @@ public class ReservationService {
         }
     }
 
-    public Reservation getById(Long reservationId) {
-        return reservationRepository.findById(reservationId)
+    public Reservation getByIdWithPostAndAuthor(Long reservationId) {
+        return reservationQueryRepository.findByIdWithPostAndAuthor(reservationId)
                 .orElseThrow(() -> new ServiceException(HttpStatus.NOT_FOUND, "해당 예약을 찾을 수 없습니다."));
     }
 
-    public void updateReservation(Long reservationId, Long memberId, UpdateReservationReqBody reqBody) {
-        Reservation reservation = reservationRepository.findByIdWithOptions(reservationId)
+    public ReservationDto updateReservation(Long reservationId, Long memberId, UpdateReservationReqBody reqBody) {
+        Reservation reservation = reservationQueryRepository.findByIdWithAll(reservationId)
                 .orElseThrow(() -> new ServiceException(HttpStatus.NOT_FOUND, "해당 예약을 찾을 수 없습니다."));
 
         // 권한 체크: 예약 작성한 게스트만 수정 가능
@@ -518,7 +480,8 @@ public class ReservationService {
                 selectedOptions
         );
 
-        reservationRepository.save(reservation);
+        Reservation r = reservationRepository.save(reservation);
+        return convertToReservationDto(r);
     }
 
     // 배송 주소 입력 검증 메서드
@@ -535,5 +498,31 @@ public class ReservationService {
                 throw new ServiceException(HttpStatus.BAD_REQUEST, "직거래 방식에서는 주소를 입력할 수 없습니다.");
             }
         }
+    }
+
+    // 중복 제거: DTO 변환 로직을 별도 메서드로 추출
+    private ReservationDto convertToReservationDto(Reservation reservation) {
+        Post post = reservation.getPost();
+        List<ReservationOption> options = reservation.getReservationOptions();
+
+        int totalAmount = calculateTotalAmount(reservation, post, options);
+
+        List<OptionDto> optionDtos = options.stream()
+                .map(ro -> new OptionDto(
+                        ro.getPostOption().getId(),
+                        ro.getPostOption().getName()
+                ))
+                .toList();
+
+        List<ReservationLogDto> logDtos = reservationLogRepository.findByReservation(reservation).stream()
+                .map(ReservationLogDto::new)
+                .toList();
+
+        return new ReservationDto(
+                reservation,
+                optionDtos,
+                logDtos,
+                totalAmount
+        );
     }
 }
